<resources>
    <string name="app_name">Cafe</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="username_hint">Имя пользователя</string>
    <string name="password_hint">Пароль</string>
    <string name="sign_in_button">Войти</string>
    <string name="satan_coffee">Satan coffe</string>
    <string name="greetings">Привет, %s! Что желаете?</string>
    <string name="tea">Чай</string>
    <string name="coffee">Кофе</string>
    <string name="additives">Что добавить в ваш %s?</string>
    <string name="sugar">Сахар</string>
    <string name="milk">Молоко</string>
    <string name="lemon">Лимон</string>
    <string name="choose_drink_type">Выберите тип напитка</string>
    <string name="make_order">СДЕЛАТЬ ЗАКАЗ</string>
    <string name="name">Имя:</string>
    <string name="drink">Напиок:</string>
    <string name="grink_type">Тип напитка:</string>
    <string name="additives_label">Добавки:</string>
    <string name="error_fields_empty">Пожалуйста, заполните все поля!</string>

    <array name="types_of_tea">
        <item>Зелёный</item>
        <item>Чёрный</item>
        <item>Улун</item>
    </array>

    <array name="types_of_coffee">
        <item>Американо</item>
        <item>Эспрессо</item>
        <item>Латте</item>
        <item>Капучино</item>
        <item>Мокиатто</item>
        <item>РАФ</item>
    </array>
</resources>